[tool.poetry]
name = "tts"
version = "0.1.0"
description = "tts"
authors = ["Tom Sapletta <info@softreck.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

# Dodaj tu zależności projektu, np.:
# numpy = "^1.26.0"
# requests = "^2.31.0"

[tool.poetry.dev-dependencies]
# pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
